parser/src/snapshots/parser__parser__tests__parse_test_data@crash__crash000017.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000017.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: Illegal(
            Some(
                String(
                    InvalidUnicode(
                        23,
                    ),
                ),
            ),
        ),
        invalid_row: 1,
        invalid_col: 22,
    },
)
